--- a/apps/havana500-admin/src/app/features/dashboard/smart/dashboard.component.html
+++ b/apps/havana500-admin/src/app/features/dashboard/smart/dashboard.component.html
@@ -40,15 +40,15 @@
 
                     <div class="widget-group p-12" fxLayout="row wrap" *antIfOnDom fxFlex="100" [@animateStagger]="{value:'50'}">
 
-                        <!-- WIDGET 1 -->
+                        <!-- ARTICLE WIDGET -->
                         <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
 
                             <!-- Front -->
                             <div class="ant-widget-front mat-white-bg mat-elevation-z2">
                                 <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                                     <mat-form-field>
-                                        <mat-select class="simplified font-size-16" [(ngModel)]="widgets.widget1.currentRange" aria-label="Change range">
-                                            <mat-option *ngFor="let range of widgets.widget1.ranges | keys" [value]="range.key">
+                                        <mat-select class="simplified font-size-16" [(ngModel)]="widgets.articlesWidget.currentRange" aria-label="Change range">
+                                            <mat-option *ngFor="let range of widgets.articlesWidget.ranges | keys" [value]="range.key">
                                                 {{range.value}}
                                             </mat-option>
                                         </mat-select>
@@ -60,14 +60,14 @@
 
                                 <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
                                     <div class="light-blue-fg font-size-72 line-height-72">
-                                        {{widgets.widget1.data.count[widgets.widget1.currentRange]}}
+                                        {{widgets.articlesWidget.data.count[widgets.articlesWidget.currentRange]}}
                                     </div>
-                                    <div class="h3 secondary-text font-weight-500">{{widgets.widget1.data.label}}</div>
+                                    <div class="h3 secondary-text font-weight-500">{{widgets.articlesWidget.data.label}}</div>
                                 </div>
 
                                 <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
-                                    <span class="h4 secondary-text text-truncate">{{widgets.widget1.data.extra.label}}:</span>
-                                    <span class="h4 ml-8">{{widgets.widget1.data.extra.count[widgets.widget1.currentRange]}}</span>
+                                    <span class="h4 secondary-text text-truncate">{{widgets.articlesWidget.data.extra.label}}:</span>
+                                    <span class="h4 ml-8">{{widgets.articlesWidget.data.extra.count[widgets.articlesWidget.currentRange]}}</span>
                                 </div>
                             </div>
                             <!-- / Front -->
@@ -79,37 +79,42 @@
                                 </button>
 
                                 <div>
-                                    {{widgets.widget1.detail}}
+                                    {{widgets.articlesWidget.detail}}
                                 </div>
                             </div>
                             <!-- / Back -->
 
                         </ant-widget>
-                        <!-- / WIDGET 1 -->
+                        <!-- / ARTICLE WIDGET -->
 
-                        <!-- WIDGET 2 -->
+                        <!-- COMMENTS WIDGET -->
                         <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
 
                             <!-- Front -->
                             <div class="ant-widget-front mat-white-bg mat-elevation-z2">
                                 <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
-                                    <div class="h3">{{widgets.widget2.title}}</div>
-
-                                    <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="more">
+                                    <mat-form-field>
+                                        <mat-select class="simplified font-size-16" [(ngModel)]="widgets.commentsWidget.currentRange" aria-label="Change range">
+                                            <mat-option *ngFor="let range of widgets.commentsWidget.ranges | keys" [value]="range.key">
+                                                {{range.value}}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                    <button mat-icon-button antWidgetToggle aria-label="more">
                                         <mat-icon>more_vert</mat-icon>
                                     </button>
                                 </div>
 
                                 <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
-                                    <div class="red-fg font-size-72 line-height-72">
-                                        {{widgets.widget2.data.count}}
+                                    <div class="light-blue-fg font-size-72 line-height-72">
+                                        {{widgets.commentsWidget.data.count[widgets.commentsWidget.currentRange]}}
                                     </div>
-                                    <div class="h3 secondary-text font-weight-500">{{widgets.widget2.data.label}}</div>
+                                    <div class="h3 secondary-text font-weight-500">{{widgets.commentsWidget.data.label}}</div>
                                 </div>
 
                                 <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
-                                    <span class="h4 secondary-text text-truncate">{{widgets.widget2.data.extra.label}}:</span>
-                                    <span class="h4 ml-8">{{widgets.widget2.data.extra.count}}</span>
+                                    <span class="h4 secondary-text text-truncate">{{widgets.commentsWidget.data.extra.label}}:</span>
+                                    <span class="h4 ml-8">{{widgets.commentsWidget.data.extra.count[widgets.commentsWidget.currentRange]}}</span>
                                 </div>
                             </div>
                             <!-- / Front -->
@@ -121,13 +126,13 @@
                                 </button>
 
                                 <div>
-                                    {{widgets.widget2.detail}}
+                                    {{widgets.commentsWidget.detail}}
                                 </div>
                             </div>
                             <!-- / Back -->
 
                         </ant-widget>
-                        <!-- / WIDGET 2 -->
+                        <!-- / COMMENTS WIDGET -->
 
                         <!-- WIDGET 3 -->
                         <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
